--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       Marisol Vega<br>
       Director of Communications<br>
       Tijuana Blanco Diablos<br>
-      media@blancodiablos.com<br>
+      <a href="mailto:media@blancodiablos.com">media@blancodiablos.com</a><br>
       +52 664 123 4567
     </div>
 
@@ -96,7 +96,7 @@
       Marisol Vega<br>
       Directora de Comunicaciones<br>
       Tijuana Blanco Diablos<br>
-      media@blancodiablos.com<br>
+      <a href="mailto:media@blancodiablos.com">media@blancodiablos.com</a><br>
       +52 664 123 4567
     </div>
   </div>
