--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
       <a href="mailto:media@blancodiablos.com">media@blancodiablos.com</a><br>
       +52 664 123 4567
     </div>
+     <img class="logo" src="blancodiablos-jerseys.jpg" alt="Tijuana Blanco Diablos Jerseys">
   </div>
 </body>
 </html>
