--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       object-fit: contain;
       margin-bottom: 20px;
     }
+    .jerseys {
+      width: 100%;
+      max-height: 600px;
+      object-fit: contain;
+      margin-bottom: 20px;
+    }
     h1 {
       font-size: 2em;
       margin-bottom: 10px;
@@ -99,7 +105,7 @@
       <a href="mailto:media@blancodiablos.com">media@blancodiablos.com</a><br>
       +52 664 123 4567
     </div>
-     <img class="logo" src="blancodiablos-jerseys.jpg" alt="Tijuana Blanco Diablos Jerseys">
+     <img class="jerseys" src="blancodiablos-jerseys.jpg" alt="Tijuana Blanco Diablos Jerseys">
   </div>
 </body>
 </html>
