--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
       +52 664 123 4567
     </div>
      <hr>
+     <div class="caption">Tijuana Blanco Diablos Jerseys / NHL Expansion Media Kit (2025)</div>
      <img class="jerseys" src="blancodiablos-jerseys.jpg" alt="Tijuana Blanco Diablos Jerseys">
+    Tijuana Blanco Diablos Jerseys
   </div>
 </body>
 </html>
